Fri Dec  8 20:30:58 2000  Brian Gough  <bjg@network-theory.co.uk>

	* ranlxs.c: renamed internal function ranlxs_set_impl to
 	ranlxs_set
	
	* ranlxd.c: renamed internal function ranlxd_set_impl to
 	ranlxd_set

	* ranlux.c: renamed internal function ranlux_set_impl to
 	ranlux_set

	* random.c: renamed internal function random_get_impl function to
 	random_get

Sat Jul 29 14:29:54 2000  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (main): updated test value for MT19937 for new seeding
 	procedure

	* mt.c: The seeding procedure has been updated to match the 10/99
 	release of MT19937.

Wed Mar  8 16:04:34 2000  Brian Gough  <bjg@network-theory.co.uk>

	* rng.c (gsl_rng_memcpy): generators must now be of the same type
 	for a copy from one to the other to work.

Thu Feb 24 16:41:48 2000  Brian Gough  <bjg@network-theory.co.uk>

	* ran3.c (ran3_set): initialize unused zeroth element of state to
 	zero for consistency.

Mon Feb 14 13:28:26 2000  Brian Gough  <bjg@network-theory.co.uk>

	* made all internal functions static

Mon Dec  6 16:21:05 1999  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (main): rewrote the tests to loop over all the generators

Wed Aug 11 20:57:10 1999  Brian Gough  <bjg@network-theory.co.uk>

	* ranlxd.c, ranlxs.c: added ranlxd and ranlxs, second generation
 	RANLUX generators from Martin Luescher.

Mon Mar  1 21:12:28 1999  Brian Gough  <bjg@netsci.freeserve.co.uk>

	* test.c (rng_parallel_state_test): added some extra tests to fill
 	a few holes in the net

	* gsl_rng.h: moved static class information (max, min, etc) out of
 	the instance data. Originally I avoided this because of the
 	overhead of the extra indirection (r->type->get vs r->get) for
 	every get function call, but that turns out to be only about 10%
 	at worst so it's worth the slight speed cost to make the code
 	safer.

Tue Nov 17 17:09:31 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gfsr4.c: added #include <config.h> which was missing
