@@ -4,11 +4,11 @@ pkginclude_HEADERS = gsl_rng.h
 
 INCLUDES= -I$(top_builddir)
 
-libgslrng_la_SOURCES = gsl_rng.h rng.c default.c \
+libgslrng_la_SOURCES = gsl_rng.h rng.c types.c default.c \
 cmrg.c gfsr4.c slatec.c minstd.c mrg.c mt.c r250.c ran0.c \
 ran1.c ran2.c ran3.c rand.c random.c rand48.c randu.c \
 ranf.c ranlux.c ranlxs.c ranlxd.c ranmar.c \
-taus.c transputer.c tt.c uni.c uni32.c vax.c zuf.c
+taus.c transputer.c tt.c uni.c uni32.c vax.c zuf.c 
 
 test_SOURCES = test.c
 test_LDADD = libgslrng.la ../ieee-utils/libgslieeeutils.la ../err/libgslerr.la ../test/libgsltest.la ../utils/libutils.la
